--- a/exe_1.html
+++ b/exe_1.html
@@ -37,6 +37,7 @@
           if (my_niu == notas[x][0]) {
             my_num = notas[x][1];
             console.log( typeof my_niu)
+            /ijdnf
             console.log( typeof notas[x][0])
         }
         }
